src/App.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  background: #111827;
  font-family: Arial, sans-serif;
}

.container {
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
}

.login-card {
  width: 360px;
  background: white;
  padding: 30px;
  border-radius: 15px;
  box-shadow: 0 0 20px rgba(0,0,0,0.2);
}

.login-card h1 {
  text-align: center;
  margin-bottom: 20px;
}

.lang-buttons {
  display: flex;
  gap: 10px;
  margin-bottom: 20px;
}

.lang-buttons button {
  flex: 1;
  padding: 10px;
}

input {
  width: 100%;
  padding: 12px;
  margin-bottom: 15px;
}

.login-btn {
  width: 100%;
  padding: 12px;
  background: #2563eb;
  color: white;
  border: none;
  cursor: pointer;
}
.attendance-table {
  width: 100%;
  border-collapse: collapse;
  margin-top: 10px;
}

.attendance-table th,
.attendance-table td {
  border: 1px solid #ccc;
  padding: 6px;
  text-align: center;
  font-size: 12px;
}

.attendance-table th {
  background: #2f65d9;
  color: white;
}

.attendance-table tr:nth-child(even) {
  background: #f5f5f5;
}
.action-btn {
  width: 100%;
  padding: 14px;
  border: none;
  border-radius: 8px;
  color: white;
  font-size: 18px;
  font-weight: bold;
  margin-top: 10px;
  cursor: pointer;
}

.checkin-btn {
  background: #16a34a;
}

.checkout-btn {
  background: #2563eb;
}

.bottom-buttons {
  display: flex;
  gap: 10px;
  margin-top: 15px;
}

.bottom-buttons button {
  flex: 1;
  font-size: 16px;
}

.employee-btn {
  background: #6b7280;
  white-space: nowrap;
}

.logout-btn {
  background: #dc2626;
}
.summary-grid {
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 10px;
  margin-top: 15px;
  margin-bottom: 15px;
}

.summary-card {
  background: #f3f4f6;
  border-radius: 10px;
  padding: 15px;
  text-align: center;
  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
  border-top: 5px solid #9b003f;
}

.summary-card h4 {
  margin: 0;
  font-size: 14px;
  color: #666;
}

.summary-card p {
  margin-top: 8px;
  font-size: 24px;
  font-weight: bold;
}
.starion-header {
  background: #9b003f;
  color: white;
  text-align: center;
  padding: 20px;
  border-radius: 12px;
  margin-bottom: 20px;
}

.starion-header h1 {
  margin: 0;
  font-size: 32px;
  font-weight: bold;
}

.starion-header p {
  margin-top: 8px;
  font-size: 14px;
}
.employee-selects {
  display: flex;
  gap: 10px;
  margin-bottom: 15px;
}

.employee-selects select {
  flex: 1;
  padding: 12px;
}

